microservices/monitoring/prometheus/service-prometheuse.yml
---
apiVersion: v1
kind: Service
metadata:
  name: prometheus-server
  namespace: monitoring
  annotations:
    prometheus.io/scrape: 'true'
    prometheus.io/port:   '9090'
spec:
  selector: 
    app: prometheus-server
  type: ClusterIP
  ports:
    - port: 9090
      protocol: TCP
      targetPort: 9090
